[metadata]
name = nopaste
summary = A nopaste service 
description-file = README.md
license = MIT
author = fmount
author-email = fmount9@autistici.org
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
keywords = nopaste

[files]
packages = nopaste
extra-files = nopaste/config/nopaste.conf

[entry_points]
console_scripts =
    nopaste = basicpastev2.run

[pbr]
autodoc_index_modules = True


[wheel]
universal = 1
